osprey_worker/src/osprey/engine/query_language/tests/test_validate_count_over/test_unsupported_predicate_function_call_rejected.txt
error: functions with non-keyword arguments are not supported
--> main.sml:1:28
     |
   1 | Query = CountOver(predicate=SomeUdf(UserLoginIp) == 'result', window='10m') >= 10
     |                             ^